Uncenter component in Y axis to avoid overflowing

--- a/globals.css
+++ b/globals.css
@@ -26,7 +26,6 @@ body {
 
 .main {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100%;
